fix project spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -802,7 +802,7 @@ a {
 	text-align: center;
 	margin-top: 2em;
 	margin-bottom: 0;
-	width: 60vw;
+	width: 80vw;
 }
 
 .project-container-light {
@@ -851,7 +851,7 @@ a {
 }
 
 .gallery {
-	width: 25em;
+	width: 20em;
 	padding: 0;
 	margin-block: 2em;
 	transition: transform 0.5s ease-in-out;
